--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,22 +5,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>K-Image Compressor</h1>
-    <!-- Image at the bottom of the page -->
-    <!-- Displaying the local image with description -->
-    <div style="margin-top: 20px;">
-        <p class="image-description">Compression clustering to 16 colors:</p>
-        <img src="{{ url_for('static_file', filename='example.png') }}" alt="Example Image" class="custom-image">
+    <div class="container">
+        <h1>K-Image Compressor</h1>
+        <!-- Image at the bottom of the page -->
+        <!-- Displaying the local image with description -->
+        <div style="margin-top: 20px;">
+            <p class="image-description">Compression clustering to 16 colors:</p>
+            <img src="{{ url_for('static_file', filename='example.png') }}" alt="Example Image" class="custom-image">
+        </div>
+        <form id="uploadForm" action="/" method="post" enctype="multipart/form-data">
+            <input type="file" name="file" accept="image/png"><br>
+            <!-- Added a line break to ensure the button appears below the file input -->
+            <input type="submit" value="Compress with K-Means!">
+        </form>
+        <p class="image-description">Max. Resolution: 4Mpx (2000x2000 px)</p>
+        <br>     
+        <!-- Load Sample Image Button -->
+        <form id="uploadForm" action="/load_sample" method="get">
+            <button type="submit">Load Sample Compression</button>
+        </form>
     </div>
-    <form action="/" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept="image/png"><br>
-        <!-- Added a line break to ensure the button appears below the file input -->
-        <input type="submit" value="Compress with K-Means!">
-    </form>
-    <br>
-    <!-- Load Sample Image Button -->
-    <form action="/load_sample" method="get">
-        <button type="submit">Load Sample Compression</button>
-    </form>
 </body>
 </html>
