--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,8 +15,7 @@
             <input type="file" name="file" accept="image/png"><br>
             <input type="submit" value="Compress with K-Means!">
         </form>
-        <p class="image-description">Max. Resolution: 1Mpx (1000x1000 px)</p>
-        <p class="image-description">Depending on the image resolution and concurrent users, compressions may take a while to perform.</p>
+        <p class="image-description">NOTE: Depending on image resolution and CPU capabilities, compressions may take long period of times. Try to use images below 4Mpx (2000x2000) for a standard CPU to avoid waiting too much.</p>
         <br>     
         <form id="uploadForm" action="/load_sample" method="get">
             <button type="submit">Load Random Sample Compression</button>
